# iot_device

./: .gitignore  .gitmodules  README.md
firmware/common/: CMakeLists.txt
firmware/iot_device/application/: CMakeLists.txt  app_general.c  app_general.h
firmware/iot_device/application/inc/: app_general.h
firmware/iot_device/application/src/: app_general.c
firmware/iot_device/bootloader/: CMakeLists.txt  stm32f401ccu6_blackpill.ioc  stm32f401ccux_flash.ld
firmware/iot_device/bootloader/Core/Inc/: main.h  stm32f4xx_hal_conf.h
firmware/iot_device/bootloader/Core/Src/: gpio.c  main.c  rtc.c
firmware/iot_device/bootloader/cmake/: gcc-arm-none-eabi.cmake
firmware/iot_device/bsp_stm32f401ccu6_blackpill/: CMakeLists.txt  CMakeToolchain.cmake  stm32f401ccu6_blackpill.ioc
firmware/iot_device/bsp_stm32f401ccu6_blackpill/core/: CMakeLists.txt  stm32f401ccu_flash.ld
firmware/iot_device/bsp_stm32f401ccu6_blackpill/core/Inc/: board_specific.h  main.h  stm32f4xx_it.h
firmware/iot_device/bsp_stm32f401ccu6_blackpill/core/Src/: board_specific.c  gpio.c  main.c  rtc.c  spi.c  usart.c
firmware/iot_device/bsp_stm32f401ccu6_blackpill/core/inc/: board_specific.h
firmware/iot_device/bsp_stm32f401ccu6_blackpill/core/src/: board_specific.c  gpio.c  main.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c
firmware/iot_device/bsp_stm32f401ccu6_blackpill/drivers/: CMakeLists.txt
firmware/iot_device/bsp_stm32f401ccu6_blackpill/drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_flash_ex.c
firmware/iot_device/bsp_stm32f401ccu6_blackpill/drivers/USB/usb_device/App/: usbd_cdc_if.c
firmware/iot_device/tools/: build_project.bat
hardware/: settings.json
hardware/stm32f401ccu6_blackpill/: README.md
